@@ -5,9 +5,6 @@ import static org.junit.platform.commons.util.AnnotationUtils.findAnnotation;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.AnnotatedElement;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
@@ -20,8 +17,8 @@ public class DisableIfBuiltWithGraalVMOlderThanCondition implements ExecutionCon
 
     private static final String QUARKUS_INTEGRATION_TEST_NAME = QuarkusIntegrationTest.class.getName();
     private static final String NATIVE_IMAGE_TEST_NAME = NativeImageTest.class.getName();
-    private static final Set<String> SUPPORTED_INTEGRATION_TESTS = Collections
-            .unmodifiableSet(new HashSet<>(Arrays.asList(QUARKUS_INTEGRATION_TEST_NAME, NATIVE_IMAGE_TEST_NAME)));
+    private static final Set<String> SUPPORTED_INTEGRATION_TESTS = Set.of(QUARKUS_INTEGRATION_TEST_NAME,
+            NATIVE_IMAGE_TEST_NAME);
 
     @Override
     public ConditionEvaluationResult evaluateExecutionCondition(ExtensionContext context) {
@@ -35,7 +32,7 @@ public class DisableIfBuiltWithGraalVMOlderThanCondition implements ExecutionCon
             return ConditionEvaluationResult.enabled("@DisableIfBuiltWithGraalVMOlderThan was added to an unsupported test");
         }
 
-        DisableIfBuiltWithGraalVMOlderThan.GraalVMVersion annotationValue = optional.get().value();
+        GraalVMVersion annotationValue = optional.get().value();
         Properties quarkusArtifactProperties = readQuarkusArtifactProperties(context);
         try {
             org.graalvm.home.Version version = org.graalvm.home.Version
